# rpa-chaos-testing-tool

./: README.md  pyproject.toml
chaos/: controller.py  experiments.py  locator_proxy.py  page_proxy.py  runner.py
examples/: demo_bot.py  demo_bot_shitty.py
rpa_chaos.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
