[project]
name = "rpa-chaos"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "playwright>=1.45.0",
  "typer>=0.12.0",
  "rich>=13.7.0"
]

[project.scripts]
rpa-chaos = "chaos.runner:app"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["chaos", "examples"]
